вроде все работает, но как-то не пускает

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.application.name=sec
 
 jwt.secret=qV1u869H69owy8UoVpd9U3S1NWkBkFu2KhidVZ++nMg=
 jwt.expiration=86400
+
+
+spring.ldap.embedded.ldif=classpath:test-server.ldif
+spring.ldap.embedded.base-dn=dc=test,dc=bpab,dc=internal
+spring.ldap.embedded.port=8389
+
+# Настройка уровня логирования для Spring Security
+logging.level.org.springframework.security=DEBUG
+
+# Настройка уровня логирования для всего приложения (опционально)
+logging.level.root=INFO
